<resources>
    <string name="app_name">FoodLoopApps</string>
    <string name="btn_sign_up_now"><u>Sign Up Now</u></string>
    <string name="txt_account">Don’t have any account yet?</string>
    <string name="log_in">LOG IN</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="food_loop">Food Loop</string>
    <string name="sign_up">SIGN UP</string>
    <string name="name">Name</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="btn_log_in"><u>Log In</u></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_bread">Food Name</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="add_information">ADD INFORMATION</string>
    <string name="expired">Expired</string>
    <string name="price">Price</string>
    <string name="share">Share</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="location">Location</string>
    <string name="contact">Contact</string>
    <string name="detail_produk">Product Details</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="username">Username</string>
    <string name="email_not_valid">Invalid Email Format!</string>
    <string name="username_not_valid">Username must be filled in!</string>
    <string name="name_not_valid">Name must be filled in!</string>
    <string name="password_not_valid">Password less than 6 characters!</string>
    <string name="password_not_same">Passwords are not the same!</string>
    <string name="category">Category</string>
    <string name="fromgallery">From Gallery</string>
    <string name="settings_language">Settings Languages</string>
    <string name="language">English</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="camera">Camera</string>
    <string name="my_post">My Post</string>
    <string name="profil">Profil</string>
    <string name="thank_you">Thank You</string>
    <string name="oke">OKE</string>
    <string name="title">Title</string>
    <string name="catagory">Catagory</string>
    <string name="full_name">Full Name</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="change_password">Change Password</string>
    <string name="for_shared_information">For Shared Information</string>
    <string name="are_you_sure">ARE YOU SURE</string>
    <string name="want_to_logout">Want to Logout?</string>
    <string name="cancel">CANCEL</string>
    <string name="want_to_delete">Want to Delete?</string>
    <string name="save">Save</string>
    <string name="user_required">Username is required</string>
    <string name="password_required">Password is required</string>
    <string name="name_food_required">Name Food is required</string>
    <string name="description_required">Description is required</string>
    <string name="address_required">Address is required</string>
    <string name="price_required">Price is required</string>
    <string name="contact_required">Contact is required</string>
    <string name="user_wrong">Wrong Username</string>
    <string name="wrong_pass">Wrong Password</string>
    <string name="login_success">Login Success</string>
    <string name="user_already">User already exists</string>
    <string name="signup_success">Signup Success</string>
    <string name="from_camera">From Camera</string>
    <string name="delete_post">Your Post Has Been Deleted</string>
    <string name="menu_invalid">Sorry, the menu is not yet available</string>
    <string name="general_information">General Information</string>
    <string name="public_policy">Privacy Policy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="text_privacy">This page provides you with an explanation of our Policy regarding the collection, use and disclosure of Personal Data that we obtain for the FoodLoop Application/Site. Every Personal Data that has been stated in the FoodLoop Application/Site is specifically for we. We use your Personal Data only for the needs of developing and improving the quality of FoodLoop services or other needs that are reasonable and do not conflict with the prevailing laws and regulations in Indonesia. By providing Personal Data on the FoodLoop Application/Site, you agree to the collection and use of the information contained in the Privacy Policy for this LinkAja Service. In using your Personal Data, we can cooperate with other third parties while still paying attention to the confidentiality aspect of your Personal Data.</string>
    <string name="information_collection_and_use">Information Collection and Use</string>
    <string name="text_information"><p>When you use this Application, it may be possible to ask you to provide some Personal Data information which we will use to identify and contact you. Personal data information includes but is not limited to: Name, Phone number, mail, Complete address. When you use our application/site, we will also process your technical data such as internet protocol address, internet device identity (ID) or media access control address, information about the manufacturer, model, and operating system. from the device you use to access the Application/Site, Access to the camera used to add pictures, Access to contacts used to facilitate interaction with fellow users. We use this data to enable Us to deliver the functions of the Application/Site, resolve technical difficulties, provide you with the correct and up-to-date version of the Application/Site and to improve the functionality of the Application/Site</p></string>
    <string name="security">Security</string>
    <string name="text_security">Information security of your Personal Data is very important to us. We ensure that the information collected will be stored securely, but please note that no method of data transmission over the internet, or method of electronic storage is absolutely 100% (one hundred percent) secure. We strive to protect your Personal Data. We store your Personal Data information by: Restricting access to your Personal Data information; and Securely destroy your Personal Data information when we no longer need it for certain purposes.</string>
    <string name="help">How To Use</string>
    <string name="about_us">About Us</string>
    <string name="show_all">Show All</string>
    <string name="text_aboutus">FoodLoop is made in order to fulfill the Bangkit Capstone Project. This application consist of three learning path (Androd, Cloud Computing, and Machine Learning) implementation. Our team consist of: Android Team (Ade and Khoirul), Cloud Team (Martin and Alza), and Machine Learning Team (Hadyan)</string>
    <string name="step1">1. Open The App</string>
    <string name="step2">2. Take Food Image or Select from Gallery</string>
    <string name="step3">3. Fill the Food Information and Details</string>
    <string name="step4">4. Press the Upload Button</string>
    <string name="step5">5. Your Food Has Been Visible to Others</string>
    <string name="foodloop_2021" translatable="false">FoodLoop 2021</string>

</resources>