<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registration.RegistrationActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_h1"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_putih"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_loop"
            android:textSize="40sp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto"
            android:textColor="@color/black"
            android:layout_marginTop="50dp"/>

        <EditText
            android:id="@+id/ed_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:hint="@string/name"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:textSize="14sp"
            android:ems="10"
            android:drawableStart="@drawable/custom_person_icon"
            android:drawablePadding="12dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:background="@drawable/custom_input"/>


        <EditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:hint="@string/email_address"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:textSize="14sp"
            android:ems="10"
            android:drawableStart="@drawable/custom_email_icon"
            android:drawablePadding="12dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:background="@drawable/custom_input"/>

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:ems="10"
            android:drawableStart="@drawable/custom_lock_icon"
            android:drawablePadding="12dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:background="@drawable/custom_input"/>

        <EditText
            android:id="@+id/ed_reenter_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:hint="@string/re_enter_password"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:ems="10"
            android:drawableStart="@drawable/custom_lock_icon"
            android:drawablePadding="12dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:background="@drawable/custom_input"/>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_login"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/roboto"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/btn_login"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/btn_log_in"
                android:fontFamily="@font/roboto"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:background="#00000000"
                android:textAllCaps="false"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>