<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.camera.CameraFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/add_information"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <ImageButton
            android:id="@+id/img_tap"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/img_capt"
            android:scaleType="fitCenter"
            android:background="#00000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/name_bread"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_gravity="left"/>

        <EditText
            android:id="@+id/ed_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/name_bread"
            android:textColor="@color/black"
            android:inputType="text"
            android:textSize="14sp"
            android:ems="10"
            android:backgroundTint="@color/blue_dark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_gravity="left"/>

        <EditText
            android:id="@+id/ed_description"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/description"
            android:textColor="@color/black"
            android:inputType="text"
            android:textSize="14sp"
            android:ems="10"
            android:backgroundTint="@color/blue_dark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/address"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_gravity="left"/>

        <EditText
            android:id="@+id/ed_address"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/address"
            android:textColor="@color/black"
            android:inputType="text"
            android:textSize="14sp"
            android:ems="10"
            android:backgroundTint="@color/blue_dark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/expired"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_gravity="left"/>

        <EditText
            android:id="@+id/ed_expired"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/expired"
            android:textColor="@color/black"
            android:inputType="text"
            android:textSize="14sp"
            android:ems="10"
            android:backgroundTint="@color/blue_dark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/price"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_gravity="left"/>

        <EditText
            android:id="@+id/ed_price"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/price"
            android:textColor="@color/black"
            android:inputType="text"
            android:textSize="14sp"
            android:ems="10"
            android:backgroundTint="@color/blue_dark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/contact"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_gravity="left"/>

        <EditText
            android:id="@+id/ed_contact"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/contact"
            android:textColor="@color/black"
            android:inputType="number"
            android:textSize="14sp"
            android:ems="10"
            android:backgroundTint="@color/blue_dark"/>

        <Button
            android:id="@+id/btn_share"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_login"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/roboto"
            android:textStyle="bold"/>
    </LinearLayout>
</ScrollView>