<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16sp"
    android:layout_gravity="center_horizontal"
    tools:context=".ui.changepassword.ChangePasswordActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/change_password"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="left"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/current_password"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_gravity="left"/>

    <EditText
        android:id="@+id/ed_first_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/current_password"
        android:textColor="@color/black"
        android:inputType="text"
        android:textSize="14sp"
        android:ems="10"
        android:backgroundTint="@color/blue_dark"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/new_password"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_gravity="left"/>

    <EditText
        android:id="@+id/ed_last_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/new_password"
        android:textColor="@color/black"
        android:inputType="text"
        android:textSize="14sp"
        android:ems="10"
        android:backgroundTint="@color/blue_dark"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/confirm_new_password"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_gravity="left"/>

    <EditText
        android:id="@+id/ed_email_update"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/confirm_new_password"
        android:textColor="@color/black"
        android:inputType="text"
        android:textSize="14sp"
        android:ems="10"
        android:backgroundTint="@color/blue_dark"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/btn_save"
        android:text="@string/save"
        android:textColor="@color/blue_dark"
        android:textSize="14sp"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        android:drawableLeft="@drawable/ic_save"
        android:paddingStart="20dp"
        android:paddingEnd="15dp"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="false"/>
</LinearLayout>