<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profil.ProfilFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_account_circle" />

    <TextView
        android:id="@+id/tv_profil_fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto"
        android:text="@string/full_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_person"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/tv_profil_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/roboto"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_email"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/tv_profil_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/roboto"
            android:text="@string/email_address"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="20dp"
        android:background="@color/black"
        android:padding="20dp"
        android:visibility="visible" />

    <Button
        android:id="@+id/btn_edit_profil"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_signup"
        android:drawableLeft="@drawable/ic_edit"
        android:fontFamily="@font/roboto"
        android:paddingStart="20dp"
        android:paddingEnd="15dp"
        android:text="@string/edit_profil"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_change_password"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_signup"
        android:drawableLeft="@drawable/ic_lock"
        android:fontFamily="@font/roboto"
        android:paddingStart="20dp"
        android:paddingEnd="15dp"
        android:text="@string/change_password"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />
</LinearLayout>