<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="220dp"
        android:layout_height="320dp"
        android:layout_margin="5dp"
        android:elevation="30dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="20sp"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:src="@drawable/ic_broken_image_black"/>
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:fontFamily="@font/roboto"
            android:textSize="18sp"
            android:layout_marginTop="230dp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tv_catagory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/catagory"
            android:fontFamily="@font/roboto"
            android:layout_marginTop="255dp"
            android:textSize="13sp"
            android:ellipsize="end"
            android:maxLines="2"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:fontFamily="@font/roboto"
            android:layout_marginTop="280dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:background="@drawable/bg_price"/>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>